--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -7,20 +7,20 @@ const navItems = [
     label: "experiencia",
     url: "/#experiencia",
   },
-  {
-    title: "Proyectos",
-    label: "proyectos",
-    url: "/#proyectos",
-  },
-  {
-    title: "Sobre mí",
-    label: "sobre-mi",
-    url: "/#sobre-mi",
-  },
+  // {
+  //   title: "Proyectos",
+  //   label: "proyectos",
+  //   url: "/#proyectos",
+  // },
+  // {
+  //   title: "Sobre mí",
+  //   label: "sobre-mi",
+  //   url: "/#sobre-mi",
+  // },
   {
     title: "Contacto",
     label: "contacto",
-    url: "mailto:miduga@gmail.com",
+    url: "mailto:tartar-nervier-0j@icloud.com",
   },
 ]
 ---
