--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,5 +1,5 @@
 ---
-const personalImageAlt = "Miguel Ángel"
+const personalImageAlt = "Brahim Korsan"
 import Badge from "@/components/Badge.astro"
 import LinkedInIcon from "@/components/icons/LinkedIn.astro"
 import MailIcon from "@/components/icons/Mail.astro"
@@ -10,11 +10,11 @@ import SocialPill from "@/components/SocialPill.astro"
   <div class="flex gap-4 mb-4">
     <img
       class="rounded-full shadow-lg size-16"
-      src="/midudev.webp"
+      src="/brahim.webp"
       alt={personalImageAlt}
     />
     <a
-      href="https://linkedin.com/in/midudev"
+        href="https://www.linkedin.com/in/brahim-korsan/"
       target="_blank"
       rel="noopener"
       class="flex items-center transition md:justify-center md:hover:scale-105"
@@ -25,24 +25,39 @@ import SocialPill from "@/components/SocialPill.astro"
   <h1
     class="text-4xl font-bold tracking-tight text-gray-800 sm:text-5xl dark:text-white"
   >
-    Hey, soy midudev
+    ¡Hola! soy Brahim
   </h1>
   <p
     class="mt-6 text-xl text-gray-800 dark:[&>strong]:text-yellow-200 [&>strong]:text-yellow-500 [&>strong]:font-semibold dark:text-gray-300"
   >
-    +15 años de experiencia. <strong
-      >Ingeniero de Software y Creador de Contenido sobre Programación</strong
-    > de Barcelona, España 🇪🇸. Especializado en el desarrollo de aplicaciones web
-    únicas.
+  <h2
+      class="text-xl lg:text-2xl text-balance max-w-[700px] text-black dark:text-white"
+  >
+    <span>Android Developer.</span><span
+      class="text-yellow-500 dark:text-yellow-200"
+  >
+          Desarrollo nativo en Android con </span
+  >
+    <span
+        class="text-purple-700 dark:text-purple-400"
+    >
+          Kotlin.</span
+    >
+
+    <span
+    >Apasionado por contribuir a proyectos innovadores que desafíen y fortalezcan mis habilidades técnicas😀.</span
+    >
+  </h2>
   </p>
   <nav class="flex flex-wrap gap-4 mt-8">
-    <SocialPill href="mailto:miduga@gmail.com">
+    <SocialPill href="mailto:tartar-nervier-0j@icloud.com">
       <MailIcon class="size-4" />
       Contáctame
     </SocialPill>
-    <SocialPill href="https://linkedin.com/in/midudev">
+    <SocialPill href="https://www.linkedin.com/in/brahim-korsan/">
       <LinkedInIcon class="size-4" />
       LinkedIn
     </SocialPill>
+
   </nav>
 </div>
