--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -17,10 +17,10 @@ const currentYear = new Date().getFullYear()
       class="flex flex-wrap items-center mt-3 text-sm font-medium dark:text-white/90 sm:mt-0"
     >
       <li>
-        <a href="/#sobre-mi" class="hover:underline me-4 md:me-6">Sobre mí</a>
+        <!--<a href="/#sobre-mi" class="hover:underline me-4 md:me-6">Sobre mí</a>-->
       </li>
       <li>
-        <a id="contacto" href="mailto:miduga@gmail.com" class="hover:underline">Contacto</a>
+        <a id="contacto" href="mailto:tartar-nervier-0j@icloud.com" class="hover:underline">Contacto</a>
       </li>
     </ul>
   </div>
