added new job and project

--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -1,9 +1,16 @@
 ---
 import ExperienceItem from "./ExperienceItem.astro"
 const EXPERIENCIE = [
+    {
+        date: "Marzo 2024 - Actualmente",
+        title: "Software Developer",
+        company: "Softtek",
+        description:
+            "Desarrollador para una aplicación de la Policía Científica y Criminalística con Flutter.",
+    },
 
     {
-        date: "Septiembre 2022 - Actualmente",
+        date: "Septiembre 2022 - Marzo 2024",
         title: "Android Developer",
         company: "SIADEN. Lab",
         description:
@@ -17,6 +24,7 @@ const EXPERIENCIE = [
         description:
             "Proyecto puntual montando y testeando equipos informáticos en Deutsche Bank.",
     },
+
 ]
 ---
 
