--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,9 @@
 ---
 import Layout from "@/layouts/Layout.astro"
 
-import AboutMe from "@/components/AboutMe.astro"
 import Briefcase from "@/components/icons/Briefcase.astro"
 import CodeIcon from "@/components/icons/Code.astro"
 import Experience from "@/components/Experience.astro"
-import ProfileCheck from "@/components/icons/ProfileCheck.astro"
 import Projects from "@/components/Projects.astro"
 import SectionContainer from "@/components/SectionContainer.astro"
 import Hero from "@/components/Hero.astro"
@@ -30,6 +28,15 @@ import Hero from "@/components/Hero.astro"
           Experiencia laboral
         </h2>
         <Experience/>
+      </SectionContainer>
+      <SectionContainer id="proyectos">
+        <h2
+            class="flex items-center mb-6 text-3xl font-semibold gap-x-3 text-black/80 dark:text-white"
+        >
+          <CodeIcon class="size-7"/>
+          Proyectos
+        </h2>
+        <Projects/>
       </SectionContainer>
     </div>
   </main>
